# rust-file-sync

./: Cargo.toml  README.md
src/: client.rs  encryption.rs  lib.rs  main.rs  server.rs
sync_folder/: test_file_1000.txt  test_file_1001.txt  test_file_1002.txt  test_file_1003.txt  test_file_1004.txt  test_file_1005.txt  test_file_1006.txt  test_file_1007.txt  test_file_1008.txt  test_file_1009.txt  test_file_101.txt  test_file_1010.txt  test_file_1011.txt  test_file_1012.txt  test_file_1013.txt  test_file_1014.txt  test_file_1015.txt  test_file_1016.txt  test_file_1017.txt  test_file_1018.txt  test_file_1019.txt  test_file_1020.txt  test_file_1021.txt  test_file_1022.txt  test_file_1023.txt  test_file_1024.txt  test_file_1025.txt  test_file_1026.txt  test_file_1027.txt  test_file_1028.txt  test_file_1029.txt  test_file_1030.txt  test_file_1031.txt  test_file_1032.txt  test_file_1033.txt  test_file_1034.txt  test_file_1035.txt  test_file_1036.txt  test_file_1037.txt  test_file_1038.txt  (+4510 more)
synced_folder/: test.txt  test_file_0.txt  test_file_100.txt  test_file_102.txt  test_file_103.txt  test_file_104.txt  test_file_1044.txt  test_file_1045.txt  test_file_1047.txt  test_file_1051.txt  test_file_1053.txt  test_file_106.txt  test_file_1078.txt  test_file_1079.txt  test_file_1085.txt  test_file_109.txt  test_file_1091.txt  test_file_111.txt  test_file_112.txt  test_file_1125.txt  test_file_1130.txt  test_file_1132.txt  test_file_1152.txt  test_file_1153.txt  test_file_1157.txt  test_file_1162.txt  test_file_1164.txt  test_file_1167.txt  test_file_1169.txt  test_file_117.txt  (+330 more)
