[package]
name = "rust_file_sync"
version = "0.1.0"
edition = "2024"
default-run = "rust_file_sync"

[dependencies]
tokio = { version = "1", features = ["full"] }
notify = "6"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
aes-gcm = { version = "0.10", features = ["aes"] }
aes = "0.8"
rand_core = "0.6"
rand = "0.8"
generic-array = "0.14"
colored = "2.0"
indicatif = "0.16"